fix: Align text to avoid new letters not appearing

--- a/src/styles.css
+++ b/src/styles.css
@@ -47,7 +47,7 @@ body {
   width: 100%;
   height: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
   font-size: 2rem;
   background-color: var(--color-quinary);
